src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void GeneralizedHoughGuil_setAngleThresh_0(void* self, int angleThresh);
extern "C" __declspec(dllexport) int GeneralizedHoughGuil_getAngleThresh_0(void* self);
extern "C" __declspec(dllexport) void GeneralizedHoughGuil_setMinScale_0(void* self, double minScale);
extern "C" __declspec(dllexport) double GeneralizedHoughGuil_getMinScale_0(void* self);
extern "C" __declspec(dllexport) void GeneralizedHoughGuil_setMaxScale_0(void* self, double maxScale);
extern "C" __declspec(dllexport) double GeneralizedHoughGuil_getMaxScale_0(void* self);
extern "C" __declspec(dllexport) void GeneralizedHoughGuil_setScaleStep_0(void* self, double scaleStep);
extern "C" __declspec(dllexport) double GeneralizedHoughGuil_getScaleStep_0(void* self);
extern "C" __declspec(dllexport) void GeneralizedHoughGuil_setScaleThresh_0(void* self, int scaleThresh);
extern "C" __declspec(dllexport) int GeneralizedHoughGuil_getScaleThresh_0(void* self);
extern "C" __declspec(dllexport) void GeneralizedHoughGuil_setPosThresh_0(void* self, int posThresh);
extern "C" __declspec(dllexport) int GeneralizedHoughGuil_getPosThresh_0(void* self);
extern "C" __declspec(dllexport) void LineSegmentDetector_Delete(void* self);
extern "C" __declspec(dllexport) void LineSegmentDetector_detect_0(void* self, void* image, void* lines, void* width, void* prec, void* nfa);
extern "C" __declspec(dllexport) void LineSegmentDetector_drawSegments_0(void* self, void* image, void* lines);
extern "C" __declspec(dllexport) int LineSegmentDetector_compareSegments_0(void* self, cv::Size size, void* lines1, void* lines2, void* image);
extern "C" __declspec(dllexport) void* cv_createLineSegmentDetector_0(int refine, double scale, double sigma_scale, double quant, double ang_th, double log_eps, double density_th, int n_bins);
extern "C" __declspec(dllexport) void* cv_getGaussianKernel_0(int ksize, double sigma, int ktype);
extern "C" __declspec(dllexport) void cv_getDerivKernels_0(void* kx, void* ky, int dx, int dy, int ksize, bool normalize, int ktype);
extern "C" __declspec(dllexport) void* cv_getGaborKernel_0(cv::Size ksize, double sigma, double theta, double lambd, double gamma, double psi, int ktype);
extern "C" __declspec(dllexport) void* cv_getStructuringElement_0(int shape, cv::Size ksize, cv::Point anchor);
extern "C" __declspec(dllexport) void cv_medianBlur_0(void* src, void* dst, int ksize);
extern "C" __declspec(dllexport) void cv_GaussianBlur_0(void* src, void* dst, cv::Size ksize, double sigmaX, double sigmaY, int borderType, int hint);
extern "C" __declspec(dllexport) void cv_bilateralFilter_0(void* src, void* dst, int d, double sigmaColor, double sigmaSpace, int borderType);
extern "C" __declspec(dllexport) void cv_boxFilter_0(void* src, void* dst, int ddepth, cv::Size ksize, cv::Point anchor, bool normalize, int borderType);
extern "C" __declspec(dllexport) void cv_sqrBoxFilter_0(void* src, void* dst, int ddepth, cv::Size ksize, cv::Point anchor, bool normalize, int borderType);
extern "C" __declspec(dllexport) void cv_blur_0(void* src, void* dst, cv::Size ksize, cv::Point anchor, int borderType);
extern "C" __declspec(dllexport) void cv_stackBlur_0(void* src, void* dst, cv::Size ksize);
extern "C" __declspec(dllexport) void cv_filter2D_0(void* src, void* dst, int ddepth, void* kernel, cv::Point anchor, double delta, int borderType);
extern "C" __declspec(dllexport) void cv_filter2D_1(void* src, void* dst, void* kernel, void* params);
extern "C" __declspec(dllexport) void cv_sepFilter2D_0(void* src, void* dst, int ddepth, void* kernelX, void* kernelY, cv::Point anchor, double delta, int borderType);
extern "C" __declspec(dllexport) void cv_Sobel_0(void* src, void* dst, int ddepth, int dx, int dy, int ksize, double scale, double delta, int borderType);
extern "C" __declspec(dllexport) void cv_spatialGradient_0(void* src, void* dx, void* dy, int ksize, int borderType);
extern "C" __declspec(dllexport) void cv_Scharr_0(void* src, void* dst, int ddepth, int dx, int dy, double scale, double delta, int borderType);
extern "C" __declspec(dllexport) void cv_Laplacian_0(void* src, void* dst, int ddepth, int ksize, double scale, double delta, int borderType);
extern "C" __declspec(dllexport) void cv_Canny_0(void* image, void* edges, double threshold1, double threshold2, int apertureSize, bool L2gradient);
extern "C" __declspec(dllexport) void cv_Canny_1(void* dx, void* dy, void* edges, double threshold1, double threshold2, bool L2gradient);
extern "C" __declspec(dllexport) void cv_cornerMinEigenVal_0(void* src, void* dst, int blockSize, int ksize, int borderType);
extern "C" __declspec(dllexport) void cv_cornerHarris_0(void* src, void* dst, int blockSize, int ksize, double k, int borderType);
extern "C" __declspec(dllexport) void cv_cornerEigenValsAndVecs_0(void* src, void* dst, int blockSize, int ksize, int borderType);
extern "C" __declspec(dllexport) void cv_preCornerDetect_0(void* src, void* dst, int ksize, int borderType);
extern "C" __declspec(dllexport) void cv_cornerSubPix_0(void* image, void* corners, cv::Size winSize, cv::Size zeroZone, cv::TermCriteria criteria);
extern "C" __declspec(dllexport) void cv_HoughLines_0(void* image, void* lines, double rho, double theta, int threshold, double srn, double stn, double min_theta, double max_theta, bool use_edgeval);
extern "C" __declspec(dllexport) void cv_HoughLinesP_0(void* image, void* lines, double rho, double theta, int threshold, double minLineLength, double maxLineGap);
extern "C" __declspec(dllexport) void cv_HoughLinesPointSet_0(void* point, void* lines, int lines_max, int threshold, double min_rho, double max_rho, double rho_step, double min_theta, double max_theta, double theta_step);
extern "C" __declspec(dllexport) void cv_HoughCircles_0(void* image, void* circles, int method, double dp, double minDist, double param1, double param2, int minRadius, int maxRadius);
extern "C" __declspec(dllexport) void cv_erode_0(void* src, void* dst, void* kernel, cv::Point anchor, int iterations, int borderType, cv::Scalar borderValue);
extern "C" __declspec(dllexport) void cv_dilate_0(void* src, void* dst, void* kernel, cv::Point anchor, int iterations, int borderType, cv::Scalar borderValue);
extern "C" __declspec(dllexport) void cv_morphologyEx_0(void* src, void* dst, int op, void* kernel, cv::Point anchor, int iterations, int borderType, cv::Scalar borderValue);
extern "C" __declspec(dllexport) void cv_resize_0(void* src, void* dst, cv::Size dsize, double fx, double fy, int interpolation);
extern "C" __declspec(dllexport) void cv_warpAffine_0(void* src, void* dst, void* M, cv::Size dsize, int flags, int borderMode, cv::Scalar borderValue, int hint);
extern "C" __declspec(dllexport) void cv_warpPerspective_0(void* src, void* dst, void* M, cv::Size dsize, int flags, int borderMode, cv::Scalar borderValue, int hint);