src/OpenCV5Sharp/Generated/NativeMethods.Imgproc.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GeneralizedHoughGuil_setAngleThresh_0(GeneralizedHoughGuilHandle self, int angleThresh);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GeneralizedHoughGuil_getAngleThresh_0(GeneralizedHoughGuilHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GeneralizedHoughGuil_setMinScale_0(GeneralizedHoughGuilHandle self, double minScale);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double GeneralizedHoughGuil_getMinScale_0(GeneralizedHoughGuilHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GeneralizedHoughGuil_setMaxScale_0(GeneralizedHoughGuilHandle self, double maxScale);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double GeneralizedHoughGuil_getMaxScale_0(GeneralizedHoughGuilHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GeneralizedHoughGuil_setScaleStep_0(GeneralizedHoughGuilHandle self, double scaleStep);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double GeneralizedHoughGuil_getScaleStep_0(GeneralizedHoughGuilHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GeneralizedHoughGuil_setScaleThresh_0(GeneralizedHoughGuilHandle self, int scaleThresh);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GeneralizedHoughGuil_getScaleThresh_0(GeneralizedHoughGuilHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GeneralizedHoughGuil_setPosThresh_0(GeneralizedHoughGuilHandle self, int posThresh);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GeneralizedHoughGuil_getPosThresh_0(GeneralizedHoughGuilHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void LineSegmentDetector_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void LineSegmentDetector_detect_0(LineSegmentDetectorHandle self, MatHandle image, MatHandle lines, IntPtr width, IntPtr prec, IntPtr nfa);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void LineSegmentDetector_drawSegments_0(LineSegmentDetectorHandle self, MatHandle image, MatHandle lines);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int LineSegmentDetector_compareSegments_0(LineSegmentDetectorHandle self, Size size, MatHandle lines1, MatHandle lines2, IntPtr image);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_createLineSegmentDetector_0(int refine, double scale, double sigma_scale, double quant, double ang_th, double log_eps, double density_th, int n_bins);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_getGaussianKernel_0(int ksize, double sigma, int ktype);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_getDerivKernels_0(MatHandle kx, MatHandle ky, int dx, int dy, int ksize, [MarshalAs(UnmanagedType.U1)] bool normalize, int ktype);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_getGaborKernel_0(Size ksize, double sigma, double theta, double lambd, double gamma, double psi, int ktype);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_getStructuringElement_0(int shape, Size ksize, Point anchor);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_medianBlur_0(MatHandle src, MatHandle dst, int ksize);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_GaussianBlur_0(MatHandle src, MatHandle dst, Size ksize, double sigmaX, double sigmaY, int borderType, int hint);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_bilateralFilter_0(MatHandle src, MatHandle dst, int d, double sigmaColor, double sigmaSpace, int borderType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_boxFilter_0(MatHandle src, MatHandle dst, int ddepth, Size ksize, Point anchor, [MarshalAs(UnmanagedType.U1)] bool normalize, int borderType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_sqrBoxFilter_0(MatHandle src, MatHandle dst, int ddepth, Size ksize, Point anchor, [MarshalAs(UnmanagedType.U1)] bool normalize, int borderType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_blur_0(MatHandle src, MatHandle dst, Size ksize, Point anchor, int borderType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_stackBlur_0(MatHandle src, MatHandle dst, Size ksize);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_filter2D_0(MatHandle src, MatHandle dst, int ddepth, MatHandle kernel, Point anchor, double delta, int borderType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_filter2D_1(MatHandle src, MatHandle dst, MatHandle kernel, IntPtr @params);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_sepFilter2D_0(MatHandle src, MatHandle dst, int ddepth, MatHandle kernelX, MatHandle kernelY, Point anchor, double delta, int borderType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_Sobel_0(MatHandle src, MatHandle dst, int ddepth, int dx, int dy, int ksize, double scale, double delta, int borderType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_spatialGradient_0(MatHandle src, MatHandle dx, MatHandle dy, int ksize, int borderType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_Scharr_0(MatHandle src, MatHandle dst, int ddepth, int dx, int dy, double scale, double delta, int borderType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_Laplacian_0(MatHandle src, MatHandle dst, int ddepth, int ksize, double scale, double delta, int borderType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_Canny_0(MatHandle image, MatHandle edges, double threshold1, double threshold2, int apertureSize, [MarshalAs(UnmanagedType.U1)] bool L2gradient);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_Canny_1(MatHandle dx, MatHandle dy, MatHandle edges, double threshold1, double threshold2, [MarshalAs(UnmanagedType.U1)] bool L2gradient);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_cornerMinEigenVal_0(MatHandle src, MatHandle dst, int blockSize, int ksize, int borderType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_cornerHarris_0(MatHandle src, MatHandle dst, int blockSize, int ksize, double k, int borderType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_cornerEigenValsAndVecs_0(MatHandle src, MatHandle dst, int blockSize, int ksize, int borderType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_preCornerDetect_0(MatHandle src, MatHandle dst, int ksize, int borderType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_cornerSubPix_0(MatHandle image, MatHandle corners, Size winSize, Size zeroZone, TermCriteria criteria);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_HoughLines_0(MatHandle image, MatHandle lines, double rho, double theta, int threshold, double srn, double stn, double min_theta, double max_theta, [MarshalAs(UnmanagedType.U1)] bool use_edgeval);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_HoughLinesP_0(MatHandle image, MatHandle lines, double rho, double theta, int threshold, double minLineLength, double maxLineGap);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_HoughLinesPointSet_0(MatHandle point, MatHandle lines, int lines_max, int threshold, double min_rho, double max_rho, double rho_step, double min_theta, double max_theta, double theta_step);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_HoughCircles_0(MatHandle image, MatHandle circles, int method, double dp, double minDist, double param1, double param2, int minRadius, int maxRadius);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_erode_0(MatHandle src, MatHandle dst, MatHandle kernel, Point anchor, int iterations, int borderType, Scalar borderValue);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_dilate_0(MatHandle src, MatHandle dst, MatHandle kernel, Point anchor, int iterations, int borderType, Scalar borderValue);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_morphologyEx_0(MatHandle src, MatHandle dst, int op, MatHandle kernel, Point anchor, int iterations, int borderType, Scalar borderValue);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_resize_0(MatHandle src, MatHandle dst, Size dsize, double fx, double fy, int interpolation);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_warpAffine_0(MatHandle src, MatHandle dst, MatHandle M, Size dsize, int flags, int borderMode, Scalar borderValue, int hint);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_warpPerspective_0(MatHandle src, MatHandle dst, MatHandle M, Size dsize, int flags, int borderMode, Scalar borderValue, int hint);
